--- a/style.css
+++ b/style.css
@@ -58,11 +58,12 @@
     display: flex;
     justify-content: center;
     width: 1440px;
-    height: 1080px;
-    background-image:  url("images/message-back.png");
+    height: 800px;
+    background-image:  url("images/poem.background.png");
     background-repeat: no-repeat;
-    background-size: cover;
+    background-size: 80%;
     background-color:#FFFDED;
+    background-position: 200px 0px;
    
    
 
@@ -91,7 +92,7 @@
 
 .about{
  background-color:#FFFDED;
- padding-bottom: 80px;
+ padding-bottom: 40px;
  
 
 }
@@ -102,6 +103,7 @@
    color: #F1883D;
    opacity: 40%;
    padding-top: 0px;
+   font-weight: normal;
    
 }
 
@@ -175,6 +177,7 @@
     color: #F1883D;
     opacity: 40%;
     padding-top: 0px;
+    font-weight: normal;
    
     
  }
@@ -210,27 +213,104 @@
 
   
 
-.how-card{
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    padding: 60px;
+ .modal{
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-around;
+  box-sizing: border-box;
+  padding: 1em 0;
+  padding: 50px 0;
+}
+
+.modal-contents{
+    position: relative;
+  
+ 
+}
+
+.case-name{
+    font-size: 42px;
+    transform: rotateZ(-15deg);
+    position: absolute;
+    top: -45px;
+    left: -30px;
+    color: #EE731A;
 
 }
 
-.how-card img{
+.modal-link{
+    text-decoration: none;
+   
+}
+.btn {
+   
+    display: block;
+    align-items: center;
+    background: FFFDED;
+    border: 2px solid #350D00;
+    color: #350D00;
+    width: 250px;
+    height: 250px;
+    border-radius: 16px;
+    box-sizing: border-box;
+    transition-duration: 0.3s;
+    text-align: center;
+    font-size: 20px;
+    line-height: 2em;
+  }
+
+  .btn p{
+      padding-top: 60px;
+      
+  }
+
+  .kuwasiku p{
+      font-size: 3px;
+      padding-top: 20px;
+     
+  }
+
+
+  .btn:hover{
+    background: #F1883D;
+    color: #ffffff;
+    border: 2px solid #ffffff;
+  }
+  .remodal {
+    position: relative;
+    padding: 25px;
+    background-color: #ffffff;
+
+  }
+  .remodal img {
+    width: 100%;
+    height: auto;
+    vertical-align: top;
+  }
+  .remodal-cancel {
+    color: #fff;
+    background: #350D00;
     width: 20%;
-}
+    margin: 25px 550px;
+    padding: 12px;
+    font-family:'Zen Maru Gothic', sans-serif;
+    border-radius: 6px;
+  }
+  .remodal-cancel:hover {
+    background: #EE731A;
+    border: 2px solid #ffffff;
+  }
 
 .solution{
     background-color:#FFFDED;
     position: relative;
-    background-image: url("images/solution-bgs.png");
-    background-size:cover;
+    background-image: url("images/solutions-background.png");
+    background-size:contain;
     background-position:0vw 60vh;
     background-repeat: no-repeat;
     width: 1440px;
     height: 1440px;
+   
    
   
 }
@@ -241,6 +321,7 @@
     font-size: 140px;
     color: #F1883D;
     opacity: 40%;
+    font-weight: normal;
 }
 
  .solution h3{
@@ -281,16 +362,16 @@
 
  .solution-card .p1-1{
      position: absolute;
-     top: 360px;
+     top: 200px;
    }
 
    .solution-card .p1-2{
     position: absolute;
-    top: 700px;
+    top: 540px;
   }
   .solution-card .p1-3{
     position: absolute;
-    top: 1000px;
+    top: 860px;
   }
 
 
@@ -307,7 +388,7 @@
     -webkit-text-stroke-color:#FFFDED;
     font-size: 50px;
     text-align: left;
-    padding: 100px;
+    padding: 260px;
     
  }
 
@@ -338,6 +419,8 @@
      flex-flow: column;
      justify-content: center;
      background-color: #FFFDED;
+     background-image: url(images/last-back-04.png);
+     background-size: cover;
  }
  .last h2{
         text-align: center;
@@ -363,8 +446,8 @@
     }
 
  footer{
-     background-color: #FFFDED;
-     padding-bottom: 40px;
+     
+     margin-bottom: 20px;
  }
 
  footer p{
@@ -374,4 +457,23 @@
      color: #350D00;
  }
 
-  
+ .fuwatAnime {
+    -webkit-animation-fill-mode:both;
+    -ms-animation-fill-mode:both;
+    animation-fill-mode:both;
+    -webkit-animation-duration:1.5s;
+    -ms-animation-duration:1.5s;
+    animation-duration:1.5s;
+    -webkit-animation-name: fuwatAnime;
+    -ms-animation-name: fuwatAnime;
+    animation-name: fuwatAnime;
+    visibility: visible !important;
+   }
+   @-webkit-keyframes fuwatAnime {
+    0% { opacity: 0; -webkit-transform: translateY(-20px); }
+    100% { opacity: 1; -webkit-transform: translateY(0); }
+   }
+   @keyframes fuwatAnime {
+    0% { opacity: 0; -webkit-transform: translateY(-20px); -ms-transform: translateY(-20px); transform: translateY(-20px); }
+    100% { opacity: 1; -webkit-transform: translateY(0); -ms-transform: translateY(0); transform: translateY(0); }
+   }
