--- a/style.css
+++ b/style.css
@@ -717,7 +717,7 @@ left: 150px;
     }
 
     .kuwasiku p{
-        font-size: 3px;
+        font-size: 8px;
         padding-top: 5px;
        
     }
@@ -805,7 +805,13 @@ left: 150px;
     margin: 60px auto;
     text-align: left;
  
- }  .last h2{
+ }  
+
+ .last{
+     width: 480px;
+ }
+ 
+ .last h2{
     text-align: left;
     font-family: 'Zen Maru Gothic', sans-serif;
     color: #350D00;
