仮完成レスポンシブ途中

--- a/style.css
+++ b/style.css
@@ -808,7 +808,7 @@ left: 150px;
  }  
 
  .last{
-     width: 480px;
+  
  }
  
  .last h2{
@@ -825,11 +825,15 @@ left: 150px;
     text-align: left;
     line-height: 0.3em;
     padding: 20px ;
-    width: 360px;
+    width: 320px;
     line-height: 4em;
     margin-bottom: 80px;
     
 
+}
+
+footer{
+    width:480px;
 }
 footer p{
     font-size: 12px;
