--- a/style.css
+++ b/style.css
@@ -3,6 +3,32 @@
     padding: 0;
     list-style: none;
 }
+header ul{
+    width: 400px;
+    display: flex;
+    justify-content: space-between;
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    margin-right: 60px;
+    margin-top: 40px;
+
+ }
+
+  header ul a{
+    font-size: 20px;
+    text-decoration: none;
+    font-weight: bold;
+    color: #350D00;
+    font-family: 'Zen Maru Gothic', sans-serif;
+   
+   
+  }
+
+  header ul a:hover{
+    color: #FFFDED;
+    transition: 0.5s ;
+  }
 
 .top{
     width: 1440px;
@@ -777,16 +803,16 @@ left: 150px;
 
    .solution-card .p1-1{
     position: absolute;
-    top: 300px;
+    top: 340px;
   }
 
   .solution-card .p1-2{
    position: absolute;
-   top: 480px;
+   top: 520px;
  }
  .solution-card .p1-3{
    position: absolute;
-   top: 650px;
+   top: 690px;
  }
 
  .solution-card .p2 p{
